--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toddler Math Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
@@ -20,6 +20,6 @@
             <button id="next-button" class="btn btn-primary" disabled>Next Question</button>
         </div>
     </div>
-    <script src="scripts/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
